add missing image

--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-04-open-source-saas-boilerplate-vs-paid.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-04-open-source-saas-boilerplate-vs-paid.mdx
@@ -110,7 +110,7 @@ With closed source, it varies a lot from one starter to another. Some offer upda
 
 Another thing to be aware of is that, with paid starters, there often might be a limit to the number of apps you are allowed to start with a single starter purchase. It is typically phrased in terms of “licenses”, and if you exceed a limit you're legally required to buy a new one, although you already own the starter code.
 
-{/* <Image src={boilerplateLicenses} alt="Boilerplate licenses" loading="lazy" /> */}
+<Image src={boilerplateLicenses} alt="Boilerplate licenses" loading="lazy" />
 
 Again, this is not the case with all paid starters (some offer unlimited projects with a single purchase), but it is a common pattern worth checking before buying.
 
