fix more commented stuff

--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-04-open-source-saas-boilerplate-vs-paid.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-04-open-source-saas-boilerplate-vs-paid.mdx
@@ -16,7 +16,7 @@ import osGhStats from '../../../assets/boilerplate-starters/os-gh-stats.png';
 import osCommits from '../../../assets/boilerplate-starters/os-commits.png';
 import freeUpdates from '../../../assets/boilerplate-starters/free-updates-vs-not.png';
 import communityContributions from '../../../assets/boilerplate-starters/community-contributions.png';
-// import boilerplateLicenses from '../../../assets/boilerplate-starters/boilerplate-licenses.png';
+import boilerplateLicenses from '../../../assets/boilerplate-starters/boilerplate-licenses.png';
 
 SaaS boilerplate starters became a very popular thing in the web dev community, and also a pathway to a luxury lifestyle for those behind them, sometimes making north of five figure amounts per month.
 
