improving stylin within the table

--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-04-open-source-saas-boilerplate-vs-paid.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-04-open-source-saas-boilerplate-vs-paid.mdx
@@ -128,7 +128,7 @@ Now that we have gone through the main differences between open-source and paid 
 
 |  | Cost | Lifetime updates | Unlimited apps | Maintainers | Community | Air Jordans Effect | Easily contribute |
 | --- | --- | --- | --- | --- | --- | --- | --- |
-| Open-source SaaS starter | **$**0 | YES | YES | Many | Big, public | Rarely | YES |
+| Open-source SaaS starter | $0 | YES | YES | Many | Big, public | Rarely | YES |
 | Paid starter | $300+ | Depends | Depends | Typically one | Sometimes, private | Often | No |
 
 This is a useful list to be aware of when making a decision which route to go, but in the end there is no one answer that will fit all. Your decision will depend on what exactly you're looking to build and which tech stack you prefer using.
