--- a/opensaas-sh/blog/src/content/docs/index.mdx
+++ b/opensaas-sh/blog/src/content/docs/index.mdx
@@ -18,7 +18,7 @@ This template is:
 1. fully open-source
 2. completely free to use and distribute
 3. comes with a ton of features out of the box
-4. community-driven and constantly improving
+4. community-driven and constantly improving!
 
 Check it out in action here: [OpenSaaS.sh](https://opensaas.sh)  
 Check out the Code: [Open SaaS GitHub Repo](https://github.com/wasp-lang/open-saas)
