--- a/opensaas-sh/blog/src/content/docs/blog/2023-11-21-coverlettergpt.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2023-11-21-coverlettergpt.mdx
@@ -2,6 +2,7 @@
 title: How I Built & Grew CoverLetterGPT to 5,000 Users and $200 MRR
 date: 2023-11-21
 tags: ["indiehacker", "saas", "sideproject"]
+authors: vince
 ---
 import { Image } from 'astro:assets';
 
