--- a/opensaas-sh/blog/src/content/docs/blog/2024-10-10-most-annoying-cookie-banner-contest.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-10-10-most-annoying-cookie-banner-contest.mdx
@@ -7,6 +7,7 @@ tags:
   - sideproject
   - hackathon
 hideBannerImage: true
+authors: vince
 ---
 import { Image } from 'astro:assets';
 import wheel from '@assets/cookie-consent/wheel.gif';
