--- a/opensaas-sh/blog/src/content/docs/blog/2024-11-22-best-annoying-cookie-consent-banners.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-11-22-best-annoying-cookie-consent-banners.mdx
@@ -7,6 +7,7 @@ tags:
   - sideproject
   - hackathon
 subtitle: and it was totally worth it
+authors: vince
 ---
 import VideoPlayer from '../../../components/VideoPlayer.astro';
 import { Image } from 'astro:assets';
