fix import and video player media queries

--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-10-turboreel-os-ai-video-generator-built-with-open-saas.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-10-turboreel-os-ai-video-generator-built-with-open-saas.mdx
@@ -11,7 +11,7 @@ authors: milica
 import VideoPlayer from '../../../components/VideoPlayer.astro';
 import { Image } from 'astro:assets';
 import landing from '../../../assets/turboreel/landing.webp';
-import interface from '../../../assets/turboreel/interface.mp4';
+import studioInterface from '../../../assets/turboreel/studio-interface.mp4';
 import opensaas from '../../../assets/turboreel/opensaas.mp4';
 
 <Image src={landing} alt="Landing page" loading="lazy" />
@@ -36,7 +36,7 @@ Here’s a video presenting Open SaaS, generated with TurboReel 🐝
 
 TurboReel lets users generate short explainer videos with minimal effort. Starting with a single text prompt describing the video’s purpose (e.g. “Create a video on building your SaaS with OpenSaaS”), you can produce professional grade TikTok and YT shorts without needing any video editing skills.
 
-<VideoPlayer src={interface} />
+<VideoPlayer src={studioInterface} />
 
 The platform’s **open-source foundation** unlocks development potential, while the **paid SaaS layer** helps with funding. 
 
