--- a/opensaas-sh/blog/src/content/docs/blog/2024-12-10-turboreel-os-ai-video-generator-built-with-open-saas.mdx
+++ b/opensaas-sh/blog/src/content/docs/blog/2024-12-10-turboreel-os-ai-video-generator-built-with-open-saas.mdx
@@ -18,29 +18,31 @@ import reddit200Upvotes from '../../../assets/turboreel/reddit-200-upvotes.webp'
 
 Peter is the creator of [**TurboReel**](https://turboreelgpt.tech/), an open-source platform with a paid SaaS layer, that transforms how creators generate short-form video content. With just a prompt, users can produce polished TikToks and YouTube Shorts in moments.
 
-But like any SaaS founder, Peter faced the challenge of turning his vision into reality without getting bogged down in repetitive technical setup. That’s where [**Wasp’s Open SaaS boilerplate**](https://opensaas.sh/) came in.
+But like any SaaS founder, Peter faced the challenge of turning his vision into reality without getting bogged down in repetitive technical setup. That's where [**Wasp's Open SaaS boilerplate**](https://opensaas.sh/) came in.
 
-In this post, we'll cover three main things: what gave Peter an idea, how he chose the tech stack to build on, and finally, how he made his first $100. Let's dive in!
+In this post, we'll cover three main things: what inspired Peter to kickstart the project, how he chose the tech stack to build on, and finally, how he made his first $100. Let's dive in!
 
 <Image src={reddit100Users} alt="Reddit screenshot, 100 users" loading="lazy" />
 
 ## The Starting Point: Open SaaS Boilerplate
 
-Peter’s journey to Open SaaS began with a simple Google search for SaaS boilerplates. "I was looking for something that could save me time," Peter recalls. "I came across a few options—some were free but basic, and [others were paid but didn’t feel worth it](https://docs.opensaas.sh/blog/2024-12-04-open-source-saas-boilerplate-vs-paid/). Then I found Wasp’s Open SaaS boilerplate."
+Peter's journey to Open SaaS began with a simple Google search for SaaS boilerplates. 
 
-What stood out to Peter wasn’t just that it was free, but that it was **open source**. *"I liked the idea of building on something maintained by a community, not locked behind a paywall*", he says. Intrigued, Peter explored [Wasp](https://wasp-lang.dev/) further and discovered an engaging community that offered exactly what he needed to start building TurboReel.
+*"I was looking for something that could save me time," Peter recalls. "I came across a few options—some were free but basic, and [others were paid but didn't feel worth it](https://docs.opensaas.sh/blog/2024-12-04-open-source-saas-boilerplate-vs-paid/). Then I found Wasp's Open SaaS boilerplate."*
 
-Here’s a video presenting Open SaaS, generated with TurboReel 🐝
+What stood out to Peter wasn't just that it was free, but that it was **open source**. *"I liked the idea of building on something maintained by a community, not locked behind a paywall"*, he says. Intrigued, Peter explored [Wasp](https://wasp-lang.dev/) further and discovered an engaging community that offered exactly what he needed to start building TurboReel.
+
+Here's a video presenting Open SaaS, generated with TurboReel 🐝
 
 <VideoPlayer src={opensaas} lgWidth="45%" />
 
-## TurboReel’s Tech Stack
+## TurboReel's Tech Stack
 
-TurboReel lets users generate short explainer videos with minimal effort. Starting with a single text prompt describing the video’s purpose (e.g. “Create a video on building your SaaS with OpenSaaS”), you can produce professional grade TikTok and YT shorts without needing any video editing skills.
+TurboReel lets users generate short explainer videos with minimal effort. Starting with a single text prompt describing the video's purpose (e.g. “Create a video on building your SaaS with OpenSaaS”), you can produce professional grade TikTok and YT shorts without needing any video editing skills.
 
 <VideoPlayer src={studioInterface} lgWidth="100%" />
 
-The platform’s **open-source foundation** unlocks development potential, while the **paid SaaS layer** helps with funding. 
+The platform's **open-source foundation** unlocks development potential, while the **paid SaaS layer** helps with funding. 
 
 The tech behind TurboReel looks like this:
 
@@ -60,8 +62,6 @@ The tech behind TurboReel looks like this:
 ### Building faster with Open SaaS boilerplate
 
 > "The first thing that impressed me with Open SaaS was how much time it saved, I could start with `wasp new saas` and immediately have a functioning boilerplate. It gave me the foundation I needed to focus on my product, not the setup."
->
->**Peter, author of TurboReel**
 
 The boilerplate included everything he needed:
 
@@ -71,7 +71,10 @@ The boilerplate included everything he needed:
 - **Frontend-backend communication via a type-safe RPC layer**
 - **Deployment of the app with a single CLI command**
 
-One feature that particularly stood out was **Wasp’s deployment commands**. "Usually, deployment takes time to set up properly," Peter explains. "But with Wasp, it was as simple as running `wasp deploy fly deploy`. "
+One feature that particularly stood out was **Wasp's deployment commands**. 
+
+> "Usually, deployment takes time to set up properly, but with Wasp, it was as simple as running `wasp deploy fly deploy`."
+
 
 Here's what Wasp's config file looks like, through which you can define full-stack auth in a Wasp app.
 
@@ -109,17 +112,17 @@ app myApp {
 
 ### Out-of-the-box Stripe integration
 
-Another significant advantage for Peter was how Open SaaS handled third-party integrations. Setting up services like [**Stripe for payments**](https://docs.opensaas.sh/guides/payments-integration/) often requires a lot of effort, but Wasp’s OpenSaaS streamlined the process - you just need to add your API key and you're good to go.
+Another significant advantage for Peter was how Open SaaS handled third-party integrations. Setting up services like [**Stripe for payments**](https://docs.opensaas.sh/guides/payments-integration/) often requires a lot of effort, but Wasp's OpenSaaS streamlined the process - you just need to add your API key and you're good to go.
 
-> *"Payments are usually a huge headache, but Open SaaS made it so smooth. I didn’t have to spend weeks integrating Stripe—it just worked. That gave me more time to focus on TurboReel’s core functionality.*"
->
->**Peter, author of TurboReel**
+> *"Payments are usually a huge headache, but Open SaaS made it so smooth. I didn't have to spend weeks integrating Stripe—it just worked. That gave me more time to focus on TurboReel's core functionality.*"
+
 
 ### The power of open source
 
 Both TurboReel and Wasp share a commitment to open source. 
 
-"The video generation space is complex," Peter explains. "There aren’t many established solutions for what I’m trying to do. [By making TurboReel open source](https://github.com/TurboReel), I’m inviting smart people to collaborate and help push the project forward."
+> *"The video generation space is complex. There aren't many established solutions for what I'm trying to do. [By making TurboReel open source](https://github.com/TurboReel), I'm inviting smart people to collaborate and help push the project forward."*
+
 
 ## Getting first users
 
